--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
                 </label>
                 </div>
                 <div class="col-lg-3">
-                    <input type="text" class="form-control" id="inpCity" name="inpCity">
+                    <input type="text" class="form-control" id="inpCity" name="inpCity" autocomplete="off">
                 </div>
                 <div class="col-lg-3">
                     <select class="form-select" name="units">
